G1: Optimize evacuation failure for regions with few failed objects

XMLWordPrintable

    • gc
    • b23

      Eacuation failure with pinned regions often leaves only regions with few live objects.

      Optimize evacuation failure handling for such failed regions.

      One option could be, until a certain threshold, track failed objects on a per object basis, then at fixup time use that list (after sorting) instead of walking all objects.

        1. speed.up.iterate.objs.png
          34 kB
          Hamlin Li
        2. speed.up.iterate.objs.txt
          9 kB
          Hamlin Li
        3. 20210902-remove-self-forwards-improvement.png
          143 kB
          Thomas Schatzl

            Assignee:
            Hamlin Li
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: