8254739: G1: Optimize evacuation failure for regions with few failed objects

Reviewed-by: tschatzl, ayang